# SimpleWoW-CPP

./: CMakeLists.txt  README.md
cmake/: genrev.cmake  options.cmake
dep/: CMakeLists.txt
dep/config-plus/: CMakeLists.txt
dep/config-plus/src/: Config.cpp  Config.h  config.tab.cpp  config.tab.h
src/: CMakeLists.txt
src/simplewow/: CMakeLists.txt  Tests.cpp
